# dvn

./: .env.template  .gitignore  .mocharc.json  Cargo.toml  README.md  canister_ids.json  dfx.json  hardhat.config.ts  package.json  tsconfig.json
.github/workflows/: test.yml
scripts/bash/: common.bash  dfx.bash  eth.bash  log.bash  send.bash  setup.bash  ssl.bash  test.bash  verify.bash  wrapper.bash
scripts/bash/deploy/: contracts.bash  dvn.bash
scripts/ts/: deploy.ts  send.ts  setup.ts  test.ts  utils.ts  verify.ts
src/contracts/: DVN.sol  EndpointV2Mock.sol  MockOApp.sol  MockOAppReceiver.sol  MockOAppSender.sol
src/dvn/: Cargo.toml  dvn.did
src/dvn/src/: chain.rs  lib.rs  state.rs  task.rs  transaction.rs  utils.rs
src/dvn/src/consensus/: mod.rs
src/dvn/src/contracts/: base.rs  dvn.json  dvn.rs  mod.rs
src/dvn/src/contracts/abi/: dvn.json
src/dvn/src/ether_utils/: abi.rs  mod.rs  signer.rs
src/dvn/src/ether_utils/provider/: base.rs  mod.rs
src/dvn/src/gas/: mod.rs
src/dvn/src/nonce/: mod.rs
src/dvn/src/provider/: base.rs  batch.rs  mod.rs  receipt.rs
src/dvn/src/signer/: mod.rs
src/dvn/tests/: access.rs  unit.rs
src/dvn/tests/common/: chain.rs  mod.rs  rpc.rs  setup.rs  utils.rs
src/dvn/tests/common/rpc/: mod.rs  parse.rs  process.rs
src/utils/: artifact.ts  chain.ts  env.ts  evm.ts  provider.ts
test/: a.test.ts
test/contracts/: Test.t.sol
test/dvn/: a.test.ts  dvn.test.ts
test/scripts/: check_price_oracle.ts  dvn.json  main.ts  measure_fees.ts  oapp_quote.ts  send_10_messages.ts  verify_message.ts
(+31 files in other folders)
