[package]
name = "dvn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ethers-core = "2.0.14"
ethers-providers = { version = "2.0.14", default-features = false }
ethers-signers = "2.0.14"
getrandom = { version = "0.2.15", features = ["custom"] }
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
serde = { version = "1.0.210", features = ["std"] }
serde_json = "1.0.128"
