[package]
name = "dvn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ethers-core = "2.0.14"
ethers-providers = { version = "2.0.14", default-features = false }
ethers-signers = "2.0.14"
futures = "0.3.31"
getrandom = { version = "0.2.15", features = ["custom"] }
ic-cdk = "0.17.0"
ic-cdk-timers = "0.11.0"
serde = { version = "1.0.210", features = ["derive", "std"] }
serde_json = "1.0.128"

[dev-dependencies]
ic-agent = "0.39.1"
pocket-ic = "6.0.0"
